add option to search unit by ID
